# Surivoice

./: .gitignore  LICENSE  README.md  pyproject.toml
src/surivoice/: __init__.py  __main__.py  cli.py  config.py  errors.py  gui.py  models.py  pipeline.py
src/surivoice/audio/: __init__.py  extractor.py  validators.py
src/surivoice/diarization/: __init__.py  diarizer.py  validators.py
src/surivoice/merge/: __init__.py  merger.py
src/surivoice/output/: formatter.py
src/surivoice/transcription/: transcriber.py
tests/: conftest.py  test_cli.py  test_diarizer.py  test_extractor.py  test_formatter.py  test_merger.py  test_pipeline.py  test_transcriber.py
